# NeuralLayers

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  Dockerfile  EXPANSION_COMPLETE.md  INTELLIGENT_EXPANSION_REPORT.md  LogicalReasoningLayer.py  MANIFEST.in  NLND(NeuralLogicalNetworkDynamics)  QUICKSTART.md  README.md  RECOMMENDATIONS.md  SESSION_COMPLETE.md  SOTA_IMPLEMENTATION_SUMMARY.md  SOTA_SESSION_COMPLETE.md  SOTA_UPGRADE_PLAN.md  TESTING_REPORT.md  brain_network_implementation.py  complete_brain_process (2).math  config.yaml  consciousness_layers.py  data_pipeline.py  demo_app.py  docker-compose.yml  export_model.py  health_check.py  hyperparameter_search.py  logical_rule.py  logicalbrain_network.py  lr_engine.py  model_enhancements.py  model_optimization.py  nlnd_example.py  nn_complete.py  pyproject.toml  requirements.txt  (+7 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
applications/: consciousness_research.py  realtime_monitoring.py
benchmarks/: README.md  benchmark_inference.py  benchmark_memory.py
docs/: README.md  conf.py  index.rst  installation.rst
examples/: README.md  basic_training.py  complete_tutorial.py  simple_network.py
monitoring/: experiment_tracker.py
neuroEquations/: cip_equation.md  cli_equation.md  lr_equation.md  nnd_equation.md  nnp_equation.md  rcp_equation.md  sit_equation.md  ubl_process.md
neuroLayers/: bn_layer.py  c_layer.py  ce_layer.py  ia_layer.py  lc_layer.py  lp_layer.py  nd_layer.py  nli_layer.py  pfo_layer.py  sp_layer.py  ss_layer.py  ubln_layer.py  uo_layer.py  upfc_layer.py
notebooks/: 01_getting_started.ipynb  02_brain_dynamics.ipynb  03_consciousness_exploration.ipynb
scripts/: quick_setup.bat  quick_setup.sh
serving/: api.py  batch_inference.py
tests/: __init__.py  test_components.py  test_sota_integration.py  test_unified_network.py
useExamples/: bn_layer_example.py
