[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurallayers"
version = "1.0.0"
description = "Unified Neural-Logical Network Dynamics Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
keywords = [
    "neural networks",
    "logical reasoning",
    "consciousness",
    "brain simulation",
    "biophysics",
    "artificial intelligence",
    "cognitive architecture",
    "hybrid AI"
]
authors = [
    {name = "biblicalandr0id"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.12",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.0",
]

notebooks = [
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
]

viz = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
]

monitoring = [
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
]

all = [
    "neurallayers[dev,notebooks,viz,monitoring]",
]

[project.urls]
Homepage = "https://github.com/biblicalandr0id/NeuralLayers"
Repository = "https://github.com/biblicalandr0id/NeuralLayers"
Documentation = "https://github.com/biblicalandr0id/NeuralLayers#readme"
"Bug Tracker" = "https://github.com/biblicalandr0id/NeuralLayers/issues"

[project.scripts]
neurallayers-train = "train:main"
neurallayers-export = "export_model:main"
neurallayers-demo = "demo_app:main"

[tool.setuptools]
packages = ["neurallayers"]
include-package-data = true

[tool.setuptools.package-data]
neurallayers = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
